# OSS_Migration

./: AGENTS.md  CLAUDE.md  README.md  constitution.md
target-repos/ttrss-python/: .dockerignore  .env.db.example  .env.example  .env.production.example  .gitignore  =6.0  Dockerfile  Makefile  README.md  alembic.ini  coverage.json  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  gunicorn.conf.py  justfile  pyproject.toml
target-repos/ttrss-python/.github/workflows/: ci.yml  deploy.yml
target-repos/ttrss-python/alembic/: env.py
target-repos/ttrss-python/alembic/versions/: 35c0c917fdec_baseline_schema_v124_31_tables.py  a1b2c3d4e5f6_fix_user_prefs_profile_pk.py  b1c2d3e4f5a6_add_pg_trgm_extension.py
target-repos/ttrss-python/docs/decisions/: 0017-frontend-strategy.md
target-repos/ttrss-python/nginx/: nginx.conf
target-repos/ttrss-python/scripts/: gen_models.sh
target-repos/ttrss-python/scripts/migrate/: convert_php_serialized.py  pgloader.load  pre_migration_audit.sh
target-repos/ttrss-python/tests/: conftest.py
target-repos/ttrss-python/tests/blueprints/: test_backend_views.py  test_public_views.py
target-repos/ttrss-python/tests/frontend/: conftest.py  test_e2e_automation.py  test_spa.py
target-repos/ttrss-python/tests/integration/: conftest.py  test_api_articles.py  test_api_counters.py  test_api_feeds.py  test_api_login.py  test_api_meta.py  test_auth_flow.py  test_models.py  test_security.py
target-repos/ttrss-python/ttrss/: __init__.py  ccache.py  celery_app.py  config.py  errors.py  extensions.py  labels.py
(+389 files in other folders)
